# LYNX

./: .dockerignore  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.cuda  ISSUES.md  README.md  TODO.md  TODO_psi_residency.md  psps
python/: CMakeLists.txt  pyproject.toml  setup.py
python/examples/: 01_quickstart.py  01_script_si2.py  02_ase_si_diamond.py  02_reusable_calculator.py  03_ase_atoms_to_lynx.py  03_from_ase.py  04_component_swapping.py  04_custom_structure.py  05_gpu_acceleration.py  05_operators_numpy.py  06_custom_scf_hook.py  06_modular_scf.py  07_custom_eigensolver.py  07_operators_numpy.py  08_xc_functionals.py
python/lynx/: __init__.py  abc.py  ase.py  ase_interface.py  atoms.py  config.py  device.py  dft.py  grid.py  operators.py  postprocessing.py  result.py  scf.py  solvers.py  system.py  units.py  xc.py
python/lynx/io/: __init__.py
python/lynx/ops/: __init__.py  gradient.py  hamiltonian.py  laplacian.py
python/lynx/solvers/: __init__.py  eigen.py  mixer.py  occupation.py  poisson.py
python/lynx/xc/: __init__.py  base.py
python/src/: ArrayBridge.hpp  Calculator.cpp  Calculator.hpp  OperatorWrappers.hpp  bind_atoms.cpp  bind_calculator.cpp  bind_core.cpp  bind_electronic.cpp  bind_operators.cpp  bind_physics.cpp  bind_solvers.cpp  bind_types.cpp  bind_xc.cpp  bindings.cpp  mpi_interop.hpp
python/tests/: test_atoms.py  test_basic.py  test_benchmark_python.py  test_config.py  test_device.py  test_dft.py  test_grid.py  test_operators.py  test_result.py  test_scf.py  test_solvers.py  test_xc.py
src/: CMakeLists.txt  main.cpp
src/atoms/: AtomSetup.hpp  AtomType.cpp  AtomType.hpp  Crystal.cpp  Crystal.hpp  Pseudopotential.cpp  Pseudopotential.hpp
src/core/: DeviceArray.cpp  DeviceArray.cu  DeviceArray.hpp  DeviceTag.hpp  Domain.cpp  Domain.hpp  Driver.cpp  Driver.hpp  FDGrid.cpp  FDGrid.hpp  GPUContext.cuh  GPUStatePtr.hpp  KPoints.cpp  KPoints.hpp  Lattice.cpp  Lattice.hpp  LynxContext.cpp  LynxContext.hpp  NDArray.cpp  NDArray.hpp  NumericalMethods.cpp  NumericalMethods.hpp  ParameterDefaults.cpp  ParameterDefaults.hpp  constants.hpp  gpu_common.cu  gpu_common.cuh  math_utils.hpp  types.hpp
src/electronic/: ElectronDensity.cpp  ElectronDensity.cu  ElectronDensity.hpp  KineticEnergyDensity.cpp  KineticEnergyDensity.cu  KineticEnergyDensity.hpp  Occupation.cpp  Occupation.hpp  Wavefunction.cpp  Wavefunction.hpp
src/io/: DensityIO.cpp  DensityIO.hpp  InputParser.cpp  InputParser.hpp  OutputWriter.cpp  OutputWriter.hpp  ResultWriter.cpp  ResultWriter.hpp
src/operators/: ComplexOperators.cu  ComplexOperators.cuh  FDStencil.cpp  FDStencil.hpp  Gradient.cpp  Gradient.cu  Gradient.cuh  Gradient.hpp  Hamiltonian.cpp  Hamiltonian.cu  Hamiltonian.cuh  Hamiltonian.hpp  Laplacian.cpp  Laplacian.cu  Laplacian.cuh  Laplacian.hpp  NonlocalProjector.cpp  NonlocalProjector.cu  NonlocalProjector.cuh  NonlocalProjector.hpp  SOCOperators.cu  SOCOperators.cuh
src/parallel/: CartTopology.cpp  CartTopology.hpp  D2DTransfer.cpp  D2DTransfer.hpp  HaloExchange.cpp  HaloExchange.cu  HaloExchange.cuh  HaloExchange.hpp  MPIComm.cpp  MPIComm.hpp  Parallelization.cpp  Parallelization.hpp
src/physics/: EffectivePotential.cpp  EffectivePotential.cu  EffectivePotential.hpp  Electrostatics.cpp  Electrostatics.hpp  Energy.cpp  Energy.hpp  Forces.cpp  Forces.cu  Forces.hpp  GPUForce.cu  GPUForce.cuh  GPUForceStress.cu  GPUForceStress.cuh  GPUKernelUtils.cuh  GPUSCF.cu  GPUSCF.cuh  GPUStress.cu  GPUStress.cuh  HybridSCF.cpp  HybridSCF.hpp  SCF.cpp  SCF.hpp  SCFInitializer.cpp  SCFInitializer.hpp  Stress.cpp  Stress.hpp  StressGPU.cu
src/solvers/: EigenSolver.cpp  EigenSolver.cu  EigenSolver.cuh  EigenSolver.hpp  KerkerPreconditioner.cpp  KerkerPreconditioner.hpp  Lanczos.hpp  LinearSolver.cpp  LinearSolver.cu  LinearSolver.cuh  LinearSolver.hpp  Mixer.cpp  Mixer.cu  Mixer.hpp  PoissonSolver.cpp  PoissonSolver.cu  PoissonSolver.hpp  Preconditioner.hpp  ScaLAPACK.hpp
src/xc/: ExactExchange.cpp  ExactExchange.hpp  ExchangePoissonSolver.cpp  ExchangePoissonSolver.hpp  GPUExactExchange.cu  GPUExactExchange.cuh  GPUExchangePoissonSolver.cu  GPUExchangePoissonSolver.cuh  SCANFunctional.cpp  SCANFunctional.hpp  XCFunctional.cpp  XCFunctional.cu  XCFunctional.cuh  XCFunctional.hpp
tests/: CMakeLists.txt  C_HSE_aux.json  C_HSE_coarse.json  C_PBE0_30.json  C_PBE0_48.json  NaCl_PBE0.json  Si_PBE0_eq.json  Si_PBE0_quick.json  benchmark_results.md  test_CompareRef.cpp  test_DensityIO.cpp  test_Domain.cpp  test_ElectronDensity.cpp  test_EndToEnd.cpp  test_Energy.cpp  test_FDGrid.cpp  test_FDStencil.cpp  test_Forces.cpp  test_GPUAlgorithms.cu  test_GPUContext.cu  test_GPUKernels.cu  test_GPUSCF.cu  test_GPUSOC.cu  test_HaloExchange.cpp  test_Hamiltonian.cpp  test_HamiltonianCompare.cpp  test_InputParser.cpp  test_KPoints.cpp  test_Laplacian.cpp  test_Lattice.cpp  test_LibxcCompare.cpp  test_LinearSolver.cpp  test_NDArray.cpp  test_Occupation.cpp  test_SCANFunctional.cpp  test_Stress.cpp  test_Wavefunction.cpp  test_XCFunctional.cpp  test_exx_unit.cpp  test_main_mpi.cpp
tests/benchmarks/cpu/: CMakeLists.txt  bench_chebyshev.cpp  bench_gradient.cpp  bench_hamiltonian.cpp  bench_laplacian.cpp  bench_mixing.cpp  bench_nonlocal.cpp  bench_sparc_gradient.cpp  bench_sparc_stencil.cpp  (+3 more)
tests/data/: BaTiO3_quick.json  Fe2_nospin_scan_gamma.json  Fe2_spin.json  Fe2_spin_scan_kpt.json  MgO_nonorth.json  O2_spin.json  Si2_kpt_PBE0.json  Si4_kpt_scan.json  Si4_scan_gamma.json  Si4_scan_kpt.json  Si8.json
tests/e2e/: test_EndToEnd.cpp  test_GPUSCF.cu  test_GPUSOC.cu  test_main_mpi.cpp
tests/unit/: test_CompareRef.cpp  test_DensityIO.cpp  test_DeviceArray.cpp  test_Domain.cpp  test_ElectronDensity.cpp  test_Energy.cpp  test_FDGrid.cpp  test_Forces.cpp  test_HamiltonianCompare.cpp  test_InputParser.cpp  test_KPoints.cpp  test_LinearSolver.cpp  test_NDArray.cpp  test_ResultWriter.cpp  test_Stress.cpp  test_Wavefunction.cpp  test_XCFunctional.cpp
trial/: CMakeLists.txt  bench_ata.cu  bench_ata2.cu  bench_ata_mpi.cu  bench_ata_nccl.cu  bench_handles  bench_handles.cu
(+260 files in other folders)
