[build-system]
requires = ["setuptools>=64", "pybind11>=2.10", "cmake>=3.18", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "pylynx"
version = "0.1.0"
description = "Python bindings for the LYNX real-space DFT simulator"
requires-python = ">=3.8"
dependencies = ["numpy"]

[project.optional-dependencies]
ase = ["ase>=3.22"]
mpi = ["mpi4py>=3.0"]

[tool.setuptools.packages.find]
include = ["lynx*"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
